k8s/ingress/traefik.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-stripprefix
  namespace: nasat
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  stripPrefix:
    prefixes:
      - /media

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-cors
  namespace: nasat
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  headers:
    customResponseHeaders:
      Access-Control-Allow-Origin: "*"
      Access-Control-Allow-Methods: "GET, HEAD, OPTIONS"
      Access-Control-Allow-Headers: "*"
      Access-Control-Max-Age: "3600"
