k8s/ingress/nasat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nasat-ingress
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  rules:
    - host: nasat.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /static
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8000
          - path: /media
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 9000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
